Update tests, README, and .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ ghc:
   - 7.8
 install:
   - "sudo apt-get install zsh"
-  - "cabal install shelly"
+  - "cabal install text"
   - "sudo apt-get install python-pip"
   - "sudo pip install cram"
 script: "make test"
