--- a/antigen-hs.cabal
+++ b/antigen-hs.cabal
@@ -15,8 +15,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Antigen
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.6 && < 5
                      , text -any
                      , directory -any
                      , filepath -any
-                     , process -any
+                     , process >= 1.2
