Install things per --user style
Following: https://docs.travis-ci.com/user/languages/python#pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ addons:
       - zsh
       - python-pip
 before_install:
-  - pip install cram
-  - cabal install text
+  - pip install --user cram
+  - cabal install --user text
 script: "make test"
