Only expose one function from antigen-hs (#35)
This is because currently I got a poor user experience
when autocompleting "antigen-hs-<tab>"

While at it, I also updated everything Travis-related for this repository.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+sudo: false
 language: haskell
 ghc:
   - 7.8
-install:
-  - "sudo apt-get install zsh"
-  - "cabal install text"
-  - "sudo apt-get install python-pip"
-  - "sudo pip install cram"
+addons:
+  apt:
+    packages:
+      - zsh
+      - python-pip
+before_install:
+  - pip install --user cram
+  - cabal install --user text
+  - zsh --version
 script: "make test"
